Start daemon implementation